WebCore/loader/FrameLoader.cpp
@@ -226,6 +226,7 @@ FrameLoader::FrameLoader(Frame* frame, FrameLoaderClient* client)
     , m_isLoadingMainResource(false)
     , m_cancellingWithLoadInProgress(false)
     , m_needsClear(false)
+    , m_shouldClearWindowProperties(true)
     , m_receivedData(false)
     , m_encodingWasChosenByUser(false)
     , m_containsPlugIns(false)
@@ -314,6 +315,8 @@ Frame* FrameLoader::createWindow(const FrameLoadRequest& request, const WindowFe
     if (request.frameName() != "_blank")
         frame->tree()->setName(request.frameName());
 
+    frame->loader()->setShouldClearWindowProperties(false);
+    
     page->chrome()->setToolbarsVisible(features.toolBarVisible || features.locationBarVisible);
     page->chrome()->setStatusbarVisible(features.statusBarVisible);
     page->chrome()->setScrollbarsVisible(features.scrollbarsVisible);
@@ -783,7 +786,7 @@ void FrameLoader::clear(bool clearWindowProperties)
     }
 
     // Do this after detaching the document so that the unload event works.
-    if (clearWindowProperties && m_frame->scriptProxy())
+    if (clearWindowProperties && m_shouldClearWindowProperties && m_frame->scriptProxy())
         m_frame->scriptProxy()->clear();
 
     m_frame->selectionController()->clear();
@@ -853,6 +856,7 @@ void FrameLoader::begin(const KURL& url)
     dispatchWindowObjectAvailable();
 
     m_needsClear = true;
+    m_shouldClearWindowProperties = true;
     m_isComplete = false;
     m_didCallImplicitClose = false;
     m_isLoadingMainResource = true;
@@ -2574,6 +2578,7 @@ void FrameLoader::open(CachedPage& cachedPage)
     document->setInPageCache(false);
 
     m_needsClear = true;
+    m_shouldClearWindowProperties = true;
     m_isComplete = false;
     m_didCallImplicitClose = false;
     m_outgoingReferrer = URL.url();
